--- a/project.yml
+++ b/project.yml
@@ -3,10 +3,18 @@ options:
   bundleIdPrefix: com.zachthomas
   deploymentTarget:
     iOS: "17.0"
+  xcodeVersion: "15.0"
 settings:
-  DEVELOPMENT_TEAM: ""
-  MARKETING_VERSION: "1.0.0"
+  SWIFT_VERSION: "5.9"
+  TARGETED_DEVICE_FAMILY: "1,2"
+  INFOPLIST_KEY_UIApplicationSceneManifest_Generation: YES
+  INFOPLIST_KEY_UIApplicationSupportsIndirectInputEvents: YES
+  INFOPLIST_KEY_UILaunchScreen_Generation: YES
+  INFOPLIST_KEY_UISupportedInterfaceOrientations_iPhone: "UIInterfaceOrientationPortrait UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
+  INFOPLIST_KEY_UISupportedInterfaceOrientations_iPad: "UIInterfaceOrientationPortrait UIInterfaceOrientationPortraitUpsideDown UIInterfaceOrientationLandscapeLeft UIInterfaceOrientationLandscapeRight"
+  GENERATE_INFOPLIST_FILE: YES
   CURRENT_PROJECT_VERSION: "1"
+  MARKETING_VERSION: "1.0"
 targets:
   BookShelf:
     type: application
@@ -15,9 +23,4 @@ targets:
       - BookShelf
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.zachthomas.bookshelf
-      INFOPLIST_GENERATION_MODE: GeneratedFile
-      GENERATE_INFOPLIST_FILE: YES
-      INFOPLIST_KEY_UIApplicationSceneManifest_Generation: YES
-      INFOPLIST_KEY_UILaunchScreen_Generation: YES
-      INFOPLIST_KEY_UISupportedInterfaceOrientations_iPhone: UIInterfaceOrientationPortrait
-      SWIFT_EMIT_LOC_STRINGS: YES
+      ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
